5 rows at bottom

--- a/translations_final.ipynb
+++ b/translations_final.ipynb
@@ -588,37 +588,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "    <thead>\n",
-       "        <tr>\n",
-       "            <th>Poem Number</th> <th>Cosine Distance</th>\n",
-       "        </tr>\n",
-       "    </thead>\n",
-       "    <tbody>\n",
-       "        <tr>\n",
-       "            <td>149        </td> <td>0.88997        </td>\n",
-       "        </tr>\n",
-       "    </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "Poem Number | Cosine Distance\n",
-       "149         | 0.88997"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "translation_distance = Table(['Poem Number', 'Cosine Distance'])\n",
     "\n",
@@ -628,7 +602,7 @@
     "    dist = distance.cosine(j_row, s_row)\n",
     "    translation_distance.append([i, dist])\n",
     "\n",
-    "translation_distance.sort('Cosine Distance').where('Poem Number', 149)"
+    "translation_distance.sort('Cosine Distance').take(np.arange(5))"
    ]
   }
  ],
